[package]
name = "engine"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[workspace]
members = ["crates/*"]

[dependencies]
asset = { path = "crates/asset" }
ecs = { path = "crates/ecs" }
geometry = { path = "crates/geometry" }
gpu = { path = "crates/gpu" }
graphics = { path = "crates/graphics" }
math = { path = "crates/math" }
os = { path = "crates/os" }

egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["svg"] }
egui-gizmo = "0.16.1"
log = "0.4.26"

[[bin]]
name = "editor"
path = "editor/main.rs"
