[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.59.0", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_Security",
	"Win32_System_Com",
	"Win32_System_LibraryLoader",
	"Win32_UI_Controls",
	"Win32_UI_HiDpi",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }
